--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@types/eslint": "^8.21.1",
+    "@tailwindcss/typography": "^0.5.9",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0"
   }
 }
